--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./plugins/bootstrap/css/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>Health | Login</title>
 </head>
 
 <body>
@@ -28,7 +28,7 @@
                     <form id="form">
                         <div class="mb-3 form-item">
                             <label for="email" class="form-label">Email:</label>
-                            <input type="email" class="form-control" id="email">
+                            <input type="email" class="form-control" id="email" placeholder="Informe seu email">
                             <span class="material-icons-outlined error">
                                 error_outline
                             </span>
@@ -38,8 +38,8 @@
                             <small class="form-text message"></small>
                         </div>
                         <div class="mb-3 form-item">
-                            <label for="senha" class="form-label">Password:</label>
-                            <input type="password" class="form-control" id="senha">
+                            <label for="senha" class="form-label">Senha:</label>
+                            <input type="password" class="form-control" id="senha" placeholder="Informe a sua senha">
                             <span class="material-icons-outlined error">
                                 error_outline
                             </span>
