--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="row">
 
             <div class="col-12 mb-3 mb-md-0 mb-lg-0 col-md-6 col-lg-6 login-banner">
-                <img src="./img/health.webp" alt="">
-                <h2>Health Track</h2>
+                <img src="./img/logo2.png" alt="">
+                <h2>Store</h2>
             </div>
 
             <div class="col-12 col-md-6 col-lg-6 login-form">
